[new] axios 拦截器 页面对接

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,21 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>主页</title>
     <!-- <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.4.0.js"></script> -->
-    <script type="text/javascript" src="https://js.cdn.aliyun.dcloud.net.cn/dev/uni-app/uni.webview.0.2.2.js"></script>
+	
+	
+	  <script type="text/javascript" src="https://js.cdn.aliyun.dcloud.net.cn/dev/uni-app/uni.webview.1.5.1.js"></script>
+    <!-- <script type="text/javascript" src="https://js.cdn.aliyun.dcloud.net.cn/dev/uni-app/uni.webview.0.2.2.js"></script> -->
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  
+  <script type="text/javascript">
+  	
+	window.addEventListener('contextmenu', function(e){ 
+		e.preventDefault(); 
+	});
+	
+  </script>
 </html>
